--- a/404.html
+++ b/404.html
@@ -3,4 +3,4 @@ layout: default
 title: 404 找不到页面，找得到爱心
 ---
 
-<script type="text/javascript" src="//qzonestyle.gtimg.cn/qzone/hybrid/app/404/search_children.js" charset="utf-8" homePageUrl="articles/" homePageName="返回继续"></script>
+<script type="text/javascript" src="//qzonestyle.gtimg.cn/qzone/hybrid/app/404/search_children.js" charset="utf-8" homePageUrl="/" homePageName="返回继续"></script>
