--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ title: Blog
     {% for post in site.posts %}
         {% if category.first == post.category %}
         <li>
-          <span>{{ post.date | date: "%F" }}</span> 
+          <span>{{ post.date | date: "%d/%m/%Y" }}</span> 
           <a href="/articles{{ post.url }}">{{ post.title }}</a>
         </li>
         {% endif %}
