add resume viewport

--- a/resume.html
+++ b/resume.html
@@ -3,7 +3,7 @@
 <head>
   <title>李驰简历</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-  <meta name="robots" content="nofollow" />
+  <meta name="viewport" content="initial-scale=1.0,user-scalable=no,maximum-scale=1,width=device-width">
   <link rel="stylesheet" type="text/css" href="http://img00.zhaopin.cn/2012/css/reset.min.css" media="all" />
   <link rel="stylesheet" type="text/css" href="http://i.zhaopin.com/Content/css/resume_preview.css" media="all" />
 </head>
