--- a/resume.html
+++ b/resume.html
@@ -42,7 +42,7 @@
           <li>
             <strong>期望行业：</strong>计算机软件、互联网/电子商务</li>
           <li>
-            <strong>工作地区：</strong>西安</li>
+            <strong>工作地区：</strong>不限</li>
           <li>
             <strong>期望月薪：</strong>面议</li>
         </ul>
@@ -51,10 +51,10 @@
         <h5>自我评价</h5>
       </dt>
       <dd>
-        <p style="width:680px; overflow:hidden;word-break: break-all; word-wrap:break-word;"> 踏实稳重，能够承受一定的工作压力，具有良好的需求研读能力和编码风格，兴趣爱好广泛。
-          <br/> 技能标签：C# .Net SQL EF NHibernate ABP WebApi Xamarin RabbitMQ KendoUI JavaScript NodeJs AngularJs VueJs BootStrap
+        <p> 踏实稳重，能够承受一定的工作压力，具有良好的需求研读能力和编码风格，兴趣爱好广泛。
+          <br/> <strong>技能标签：</strong>C# .Net SQL EF NHibernate ABP WebApi Xamarin RabbitMQ KendoUI JavaScript NodeJs AngularJs VueJs BootStrap
           H5
-          <br/> 工具标签：VS SqlServer VSCode Git SVN Jira SwaggerUI Brakets WebStorm CentOS
+          <br/> <strong>工具标签：</strong>VS SqlServer VSCode Git SVN Jira SwaggerUI Brakets WebStorm CentOS
         </p>
       </dd>
       <dt>
